--- a/docs/ccastro_w266_bidaf_transferlearning.tex
+++ b/docs/ccastro_w266_bidaf_transferlearning.tex
@@ -141,7 +141,7 @@ $$
 L(\theta)  = - \frac{1}{N} \sum^N_i log(p^1_{y^1_i}) + log(p^2_{y^2_i})
 $$
 
-where $\theta$ is the set of all trainable weights in the model including CNN filters and LSTM cells, $N$ is the number of train examples and $y_1_i$ and $y_2_i$ are the true start and end indices of the \textit{i}-th example respectively and $p_k$ indicates the \textit{k}-th value of the vector $p$, which represents the probability distributions of the start and end indices over the entire paragraphs, and is obtained form the softmax calculation in the output layer \cite{bidaf:2017}.
+where $\theta$ is the set of all trainable weights in the model including CNN filters and LSTM cells, $N$ is the number of train examples and $y^1_i$ and $y^2_i$ are the true start and end indices of the \textit{i}-th example respectively and $p_k$ indicates the \textit{k}-th value of the vector $p$, which represents the probability distributions of the start and end indices over the entire paragraphs, and is obtained form the softmax calculation in the output layer \cite{bidaf:2017}.
 
 %\centering
 %
@@ -170,20 +170,20 @@ Finally, we also train another BiDAF network on the MS-MARCO dataset without tra
 
 The first step of our research is to train a BiDAF over the SQuAD dataset. We train for 16.4 hours using a single NVidia K80 GPU, and obtain results very close to those reported in the original study \cite{bidaf:2017}, with exact match percentage of $65.64$ and F1 score of $75.68$. The baseline logistic regression performance for this dataset is exact match percentage of $40.0$ and F1 score of $51$. Human performance for this task is EM at $82.3$ and F1 score of $91.2$ \cite{squad:2016} \cite{rnet}.
 
-\begin{table}[t!]
+\begin{table*}[t!]
 \begin{center}
-\begin{tabular}{l|r|r}
+\begin{tabular}{|l|r|r|}
 \hline \bf Model & \bf EM & \bf F1 \\ \hline
 Logistic regression baseline  \cite{squad:2016} & 40.4 & 51.0 \\
 Bi-DAF (Original paper) & 68.0 & 77.3 \\
-Bi-DAF (Our result - initial learning rate: 0.8) & 75.68 & \\
-Bi-DAF (Our result - initial learning rate: 0.5) & 74.07 & \\
+Bi-DAF (Our result - initial learning rate: 0.8) & 66.905 &  75.68 \\
+Bi-DAF (Our result - initial learning rate: 0.5) & 65.71 & 74.07\\
 R-Net (Single model) & 76.461 & 84.265 \\
 Human performance \cite{squad:2016} & 82.304 & 91.221 \\
 \end{tabular}
 \end{center}
 \caption{\label{squad-table} Results over the SQuAD dataset, including our results, baseline, human performance and state of the art as of the time of writing this work. All results are for single model, ensembles tend to do quite better but add complexity to the study.}
-\end{table}
+\end{table*}
 
 Note that as most literature around this style of machine comprehension, we report EM which represents the percentage of exact matches, and the F1 score, which measures the weighted average of the precision and recall rate at a character level.
 
@@ -199,19 +199,20 @@ For the second set of experiments, we start with two Bi-DAF networks trained wit
 
 The results over the MS-MARCO evaluation is depicted in the table below.
 
-\begin{table}[t!]
+\begin{table*}[t!]
 \begin{center}
-\begin{tabular}{l|r|r}
-\hline \bf Model & \bf F1 (learning rate = 0.8) & \bf F1 (learning rate = 0.5) \\ \hline
+\begin{tabular}{|l|r|r|}
+\hline \bf Model & \bf F1 (lr = 0.8) & \bf F1 (lr = 0.5) \\ \hline
 Bi-DAF over MS-MARCO baseline (Direct training - no transfer) & 11.02 & n/a  \\
 Bi-DAF SQuAD pre-trained (direct evaluation - no transfer) &  50.97 & 48.33 \\
 Bi-DAF SQuAD pre-trained + MS-MARCO fine tuning (133 samples) & 54.88 & 55.02 \\
 Bi-DAF SQuAD pre-trained + MS-MARCO fine tuning (250 samples) & 55.71 & 56.83 \\
-Bi-DAF SQuAD pre-trained + MS-MARCO fine tuning (500 samples) & 56.01 & \textbf(59.14) \\
+Bi-DAF SQuAD pre-trained + MS-MARCO fine tuning (500 samples) & 56.01 & \bf 59.14 \\
+\hline
 \end{tabular}
 \end{center}
-\caption{\label{squad-table} Results for transfer learning to the MS-MARCO domain, including the no-transfer baseline and the no fine tuning baseline.
-\end{table}
+\caption{\label{msmarco-table} Results for transfer learning to the MS-MARCO domain, including the no-transfer baseline and the no fine tuning baseline.}
+\end{table*}
 
 
 \section{Analysis}
